<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.paweldev.maszynypolskie.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_devices"
        android:name="com.paweldev.maszynypolskie.ui.devices.DevicesListFragment"
        android:label="@string/menu_devices"
        tools:layout="@layout/fragment_devices" />

    <fragment
        android:id="@+id/nav_customers"
        android:name="com.paweldev.maszynypolskie.ui.customers.CustomersListFragment"
        android:label="@string/menu_customers"
        tools:layout="@layout/fragment_customers" />

    <fragment
        android:id="@+id/nav_categories"
        android:name="com.paweldev.maszynypolskie.ui.categories.CategoriesListFragment"
        android:label="@string/menu_categories"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.paweldev.maszynypolskie.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.paweldev.maszynypolskie.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
</navigation>